applications/xihe-test-v2/xihe-forward/xihe-forward-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xihe-forward-deployment
  namespace: xihe-test-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xihe-forward
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: xihe-forward
    spec:
      containers:
      - image: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe-forward-test:48a3f0218fedafc10a6505dcfd268d403df3fcb2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8000
          timeoutSeconds: 5
        name: xihe-forward
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8000
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 1000m
            memory: 1000Mi
          requests:
            cpu: 1000m
            memory: 1000Mi
