applications/xihe-test-v2/xihe-forward/xihe-forward-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xihe-forward-service
  namespace: xihe-test-v2
spec:
  ports:
  - name: http-port
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: xihe-forward
  type: ClusterIP
