applications/xihe-test-v2/xihe-forward/xihe-forward-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: xihe-forward-ingress
  namespace: xihe-test-v2
spec:
  rules:
  - host: xihe-forward.test.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: xihe-forward-service
          servicePort: 8000
        path: /
  tls:
  - hosts:
    - xihe-forward.test.osinfra.cn
    secretName: xihe-test-osinfra-cn-tls
